--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "dotenv": "^16.0.0",
     "expo": "~44.0.0",
+    "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
